--- a/service/service_edu/pom.xml
+++ b/service/service_edu/pom.xml
@@ -11,6 +11,19 @@
 
     <artifactId>service_edu</artifactId>
 
-
+    <dependencies>
+        <!--mapStruct依赖-->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-jdk8</artifactId>
+            <version>1.2.0.CR1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.2.0.CR1</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
