--- a/service/service_edu/pom.xml
+++ b/service/service_edu/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>service_edu</artifactId>
 
     <dependencies>
+        <!--对象转换的依赖-->
         <!--mapStruct依赖-->
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -24,6 +25,20 @@
             <version>1.2.0.CR1</version>
             <scope>provided</scope>
         </dependency>
+        <!--使用注解进行参数校验-->
+        <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.2.0.Final</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
