--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.jackson.time-zone=GMT+8
 # \u8BBE\u7F6E\u65E5\u5FD7\u7EA7\u522B
 # \u5206\u4E3A\uFF1AOFF\u3001FATAL\u3001ERROR\u3001WARN\u3001INFO\u3001DEBUG\u3001ALL
 # logging.level.root=INFO
+
+spring.redis.host=192.168.27.130
+spring.redis.port=6379
+# \u6700\u5927\u8FDE\u63A5\u6570
+spring.redis.jedis.pool.max-active= 8
