--- a/service/service_edu/pom.xml
+++ b/service/service_edu/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>service_edu</artifactId>
 
     <dependencies>
+        <!--rocketmq依赖-->
+        <dependency>
+            <!--需要与rocketmq版本号一致-->
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.2.0</version>
+        </dependency>
         <!--对象转换的依赖-->
         <!--mapStruct依赖-->
         <dependency>
