--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.redis.host=192.168.27.130
 spring.redis.port=6379
 # \u6700\u5927\u8FDE\u63A5\u6570
 spring.redis.jedis.pool.max-active= 8
+
+#\u914D\u7F6Emapper xml\u6587\u4EF6\u7684\u8DEF\u5F84
+mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
