--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -25,10 +25,18 @@ spring.jackson.time-zone=GMT+8
 # \u5206\u4E3A\uFF1AOFF\u3001FATAL\u3001ERROR\u3001WARN\u3001INFO\u3001DEBUG\u3001ALL
 # logging.level.root=INFO
 
-spring.redis.host=192.168.27.130
-spring.redis.port=6379
+# spring.redis.host=192.168.27.130
+# spring.redis.port=6379
 # \u6700\u5927\u8FDE\u63A5\u6570
-spring.redis.jedis.pool.max-active= 8
+# spring.redis.jedis.pool.max-active= 8
 
 #\u914D\u7F6Emapper xml\u6587\u4EF6\u7684\u8DEF\u5F84
 mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
+
+# nacos\u670D\u52A1\u5730\u5740
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+#\u5F00\u542F\u7194\u65AD\u673A\u5236
+feign.hystrix.enabled=true
+# \u8BBE\u7F6Ehystrix\u8D85\u65F6\u65F6\u95F4\uFF0C\u9ED8\u8BA41000ms
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
