--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -12,3 +12,5 @@ aliyun.oss.file.keyid=LTAI5tRYv6xR6o3AzjUZexyx
 aliyun.oss.file.keysecret=LyAaEFQixP8jvKLaMoT2dn7iA7lMqU
 #bucket\u53EF\u4EE5\u5728\u63A7\u5236\u53F0\u521B\u5EFA\uFF0C\u4E5F\u53EF\u4EE5\u4F7F\u7528java\u4EE3\u7801\u521B\u5EFA
 aliyun.oss.file.bucketname=hgk-guli
+# nacos\u670D\u52A1\u5730\u5740
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
