--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,6 +15,8 @@
         <module>service_edu</module>
         <module>service_oss</module>
         <module>service_vod</module>
+        <module>service-cms</module>
+        <module>service_acl</module>
     </modules>
 
     <dependencies>
