--- a/common/pom.xml
+++ b/common/pom.xml
@@ -50,6 +50,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!-- spring2.X集成redis所需common-pool2-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.6.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -57,12 +63,7 @@
             <version>5.7.5</version>
         </dependency>
 
-        <!-- spring2.X集成redis所需common-pool2
-        <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-pool2</artifactId>
-        <version>2.6.0</version>
- </dependency>-->
+
     </dependencies>
 
-       </project>
+</project>
