短信验证码完成

--- a/service/service_msm/src/main/resources/application.properties
+++ b/service/service_msm/src/main/resources/application.properties
@@ -36,3 +36,10 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # nacos\u670D\u52A1\u5730\u5740
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+# \u77ED\u4FE1\u670D\u52A1
+short.message.host=http://smsmsgs.market.alicloudapi.com
+short.message.path=/smsmsgs
+short.message.appCode=6bbfe5dc91d44b478297c30d0d8fddbe
+short.message.sign=1
+short.message.skin=2
